fix: 불변리스트로 생성하던 것을 가변리스트 생성으로 변경